changed submit button

--- a/src/Components/Faqs/QuestionInput.scss
+++ b/src/Components/Faqs/QuestionInput.scss
@@ -15,6 +15,11 @@
     align-items: center;
 }
 
+.faq-hover:hover{
+    background-color: #0069ff;
+    color: white;
+}
+
 @media only screen and (max-width:769px){
 
     .question-input{
