added lazy loading to images

--- a/src/Components/Faqs/QuestionInput.scss
+++ b/src/Components/Faqs/QuestionInput.scss
@@ -26,10 +26,9 @@
       height:auto;
       grid-template-columns: 100%;
 
-      textarea{
-          margin-right: 10px;
-      }
-
     }
-  
+  .button-div-faq{
+      margin: 0 10px;
+      padding-bottom: 20px;
+  }
   }
