--- a/src/Components/PaymentForm/PaymentForm.scss
+++ b/src/Components/PaymentForm/PaymentForm.scss
@@ -1,5 +1,6 @@
 .payment-form-bg{
-    background-color: rgb(181, 246, 255);
+    background: white;
+    border: 1px solid black;
 
 .payment-form{
     input, select{
