--- a/src/Components/OurServices/OurServices.scss
+++ b/src/Components/OurServices/OurServices.scss
@@ -1,6 +1,7 @@
 .section-div {
   display: grid;
   grid-template-columns: 50% 50%;
+  align-items:center;
 }
 .image-container {
   /* background-color: black; */
